--- a/BKS/BKS/Login/CorzinaWindow.xaml
+++ b/BKS/BKS/Login/CorzinaWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BKS.CorzinaWindow"
+﻿<Window x:Class="BKS.Login.CorzinaWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,46 +6,81 @@
         xmlns:local="clr-namespace:BKS.Login"
         mc:Ignorable="d"
         Title="CorzinaWindow" Height="450" Width="800"
-        Background="DarkMagenta">
+        Background="Wheat">
     <Grid>
-        <ListView>
-            <Border Height="200" Width="190" 
+        <ListView x:Name="CartWin"
+            ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+            ScrollViewer.VerticalScrollBarVisibility="Hidden" 
+            Background="{x:Null}" BorderBrush="{x:Null}" 
+            Foreground="Black" 
+            d:ItemsSource="{d:SampleData ItemCount=1}" 
+            BorderThickness="1,1,1,1" 
+            Padding="1,0,0,0" 
+            UseLayoutRounding="False" 
+            RenderTransformOrigin="0.5,0.5" 
+            Margin="0,40,0,0">
+
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel/>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Border Height="250" Width="200" 
                     OpacityMask="{x:Null}" 
                     BorderBrush="#FFB5B4B4"
                     BorderThickness="1">
-                <StackPanel>
-                    <TextBlock Text="Название:" TextWrapping="Wrap" FontSize="15" FontWeight="Bold"/>
-                    <TextBlock x:Name="ttt" Text="{Binding Title}" TextWrapping="Wrap"
+                        <StackPanel>
+                            <TextBlock Text="Название:" TextWrapping="Wrap" FontSize="15" FontWeight="Bold"/>
+                            <TextBlock Text="{Binding Title}" TextWrapping="Wrap"
                                FontSize="15"/>
-                    <TextBlock Text="Цена:" TextWrapping="Wrap" FontSize="15" FontWeight="Bold"/>
-                    <TextBlock Text="{Binding Price}"
+                            <TextBlock Text="Цена:" TextWrapping="Wrap" FontSize="15" FontWeight="Bold"/>
+                            <TextBlock Text="{Binding Price}"
                                FontSize="15"/>
-                    <TextBlock Text="Описание:" TextWrapping="Wrap" FontSize="15" FontWeight="Bold"/>
-                    <TextBlock Text="{Binding Description}"
+                            <TextBlock Text="Описание:" TextWrapping="Wrap" FontSize="15" FontWeight="Bold"/>
+                            <TextBlock Text="{Binding Description}"
                                FontSize="15"/>
+                            <TextBlock Text="{Binding Quantity}"
+                                FontSize="15"/>
+                            <Button x:Name="PlusBTN" Click="PlusBTN_Click"
+                            Height="20" Width="20" HorizontalAlignment="Left" Margin="5,15,0,0" BorderBrush="{x:Null}" Foreground="{x:Null}">
+                                <Button.Background>
+                                    <ImageBrush ImageSource="/rec/plus.png"/>
+                                </Button.Background>
+                            </Button>
+                            <Button x:Name="MinusBTN" Click="MinusBTN_Click"
+                            Height="20" Width="20" HorizontalAlignment="Left" Margin="5,15,0,0" BorderBrush="{x:Null}" Foreground="{x:Null}">
+                                <Button.Background>
+                                    <ImageBrush ImageSource="/rec/Close.png"/>
+                                </Button.Background>
+                            </Button>
+                            <Button x:Name="deleteBTN" Click="deleteBTN_Click"
+                                Height="20" Width="20" HorizontalAlignment="Left" Margin="5,15,0,0" BorderBrush="{x:Null}" Foreground="{x:Null}">
+                                <Button.Background>
+                                    <ImageBrush ImageSource="/rec/del.png"/>
+                                </Button.Background>
+                            </Button>
 
-                    <Button x:Name="AddCart" Click="AddCart_Click"
-                        Height="20" Width="20" HorizontalAlignment="Left" Margin="5,15,0,0" 
-                            BorderBrush="{x:Null}" Foreground="{x:Null}">
-                        <Button.Background>
-                            <ImageBrush ImageSource="/rec/Tools.png"/>
-                        </Button.Background>
-                    </Button>
-                    <Button x:Name="Plas" Click="p"
-                        Height="20" Width="20" HorizontalAlignment="Left" Margin="5,15,0,0" BorderBrush="{x:Null}" Foreground="{x:Null}">
-                        <Button.Background>
-                            <ImageBrush ImageSource="/rec/Cansel.png"/>
-                        </Button.Background>
-                    </Button>
-                    <Button x:Name="Minus" Click="AddCart_a lick"
-                        Height="20" Width="20" HorizontalAlignment="Left" Margin="5,15,0,0" BorderBrush="{x:Null}" Foreground="{x:Null}">
-                            <Button.Background>
-                                <ImageBrush ImageSource="/rec/Cansel.png"/>
-                            </Button.Background>
-                        </Button>
 
-                </StackPanel>
-            </Border>
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
+        <Grid>
+            <Grid HorizontalAlignment="Center" Height="25" VerticalAlignment="Top" Width="800">
+                <Button x:Name="BackBTN" Click="BackBTN_Click"
+                    Content="назад" HorizontalAlignment="Left" Height="25" Margin="26,0,0,0" 
+                        VerticalAlignment="Center" Width="61"/>
+                <Button x:Name="PayBtn" Click="PayBtn_Click"
+                    Content="купить" HorizontalAlignment="Left" Height="25" 
+                        Margin="714,0,0,0" 
+                        VerticalAlignment="Center" Width="61"/>
+            </Grid>
+        </Grid>
+
+
     </Grid>
 </Window>
