--- a/BKS/BKS/Login/CorzinaWindow.xaml
+++ b/BKS/BKS/Login/CorzinaWindow.xaml
@@ -8,6 +8,11 @@
         Title="CorzinaWindow" Height="450" Width="800"
         Background="Wheat">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="7*"/>
+            <RowDefinition Height="55*"/>
+        </Grid.RowDefinitions>
+        <Image  Source="/rec/гайка.png" HorizontalAlignment="Left"/>
         <ListView x:Name="CartWin"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
             ScrollViewer.VerticalScrollBarVisibility="Hidden" 
@@ -18,7 +23,7 @@
             Padding="1,0,0,0" 
             UseLayoutRounding="False" 
             RenderTransformOrigin="0.5,0.5" 
-            Margin="0,40,0,0">
+            Margin="0,1,0,0" Grid.Row="1">
 
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -69,8 +74,8 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Grid>
-            <Grid HorizontalAlignment="Center" Height="25" VerticalAlignment="Top" Width="800">
+        <Grid Grid.RowSpan="2">
+            <Grid HorizontalAlignment="Center" Height="25" VerticalAlignment="Bottom" Width="800">
                 <Button x:Name="BackBTN" Click="BackBTN_Click"
                     Content="назад" HorizontalAlignment="Left" Height="25" Margin="26,0,0,0" 
                         VerticalAlignment="Center" Width="61"/>
